# clone-project-manager

./: .gitignore  Cargo.toml  LICENSE  README.md  clone  install.sh
.github/workflows/: build.yml  release.yml
src/: lib.rs
src/projectmanager/: mod.rs
src/projectmanager/nvim/: mod.rs
src/projectmanager/vscode/: mod.rs
