[package]
name = "clone-project-manager"
description = "Automatically Clone GitHub repositories into a structured workspace. And use it in your VSCode or NVim's project manager."
license = "MIT"
version = "0.0.0"
edition = "2021"
include = [
    "**/*.rs",
    "Cargo.toml"
]

[lib]
name = "clone_lib"
path = "src/lib.rs"

[[bin]]
name = "clone"
path = "src/bin/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["clap"]

[dependencies]
clap = { version = "4.5", features = ["derive"], optional = true }
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
regex = "1.10"
openssl = { version = "0.10", features = ["vendored"] }
